--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -63,6 +63,10 @@
     overflow-y: auto;
 }
 
+.private-chat-body .card-body > :first-child {
+    margin-top: auto !important;
+}
+
 .private-chat-body .card-header {
     background: linear-gradient(180deg, #D9D9D9 0%, rgba(217, 217, 217, 0) 100%);
     padding-left: 10%;
